1999-04-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/style.c: reversed weird logic of off_flags meaning 'flag has
	been turned on'

	* fvwm/repeat.h:
	* fvwm/repeat.c:
	* fvwm/gsfr.h:
	* libs/XResource.c:
	* libs/Bindings.c:
	* fvwm/functions.h:
	* fvwm/bindings.h:
	* fvwm/style.h:
	* fvwm/bindings.c:
	* COPYING: changed to GPL

1999-04-08  Hippo

	* fvwm/fvwm.c: sticky_grey_pixmap initialised for mono screens

1999-04-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/functions.c:
	* fvwm/builtins.c: include style.h

	* fvwm/fvwm.c (InitVariables): removed initialisation of TheList

	* fvwm/style.c:
	* fvwm/screen.h (ScreenInfo): moved TheList to style.c (not a global
	any longer)

	* fvwm/Makefile.am (fvwm2_SOURCES): added style.h

	* fvwm/style.h (name_list_struct):
	* fvwm/style.c (LookInList):
	(merge_styles):
	moved stuff from add_window.c/misc.h to style.[ch] where it belongs.

	* fvwm/styles.h: new file

	* fvwm/functions.c (expand): fixed parsing of empty arguments

1999-04-07  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* acconfig.h:
	* INSTALL.fvwm: Finish the removal of the NO_SAVEUNDERS and
	WINDOWSHADE configure options.

1999-04-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/functions.c (expand): some clean up

	* fvwm/Makefile.am (fvwm2_SOURCES): added gsfr.h

	* configure.in: changed version to 2.3.1

	* fvwm/repeat.h:
	* fvwm/repeat.c:
	* fvwm/functions.c:
	* fvwm/functions.h:
	moved all code for Repeat command to repeat.c and repeat.h

	* fvwm/Makefile.am (fvwm2_SOURCES): added bindings.h, repeat.c,
	repeat.h

1999-04-06  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm.c (CaptureAllWindows):
	(CaptureOneWindow):
	fixed coredump

	* fvwm/icons.c:
	* fvwm/functions.c:
	* fvwm/focus.c:
	* fvwm/events.c:
	* fvwm/bindings.c:
	* fvwm/add_window.c:
	use bindings.h

	* fvwm/misc.h: moved prototypes for bindings.c to bindings.h
	* fvwm/bindings.h: new file

	* fvwm/fvwm2.1 (RecaptureWindow):
	* fvwm/misc.h:
	* fvwm/parse.h: