@@ -16,6 +16,7 @@
 
 1999-04-08  Hippo
 
+	* fvwm/add_window.c: code cleanup, removed most events from ->parent
 	* fvwm/fvwm.c: sticky_grey_pixmap initialised for mono screens
 
 1999-04-07  Dominik Vogt  <dominik_vogt@gmx.de>
